# sekirei

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  README_ja.md
.githooks/: pre-commit
.github/workflows/: ci.yml
crates/bench/: Cargo.toml
crates/bench/benches/: movegen.rs
crates/csa/: Cargo.toml
crates/csa/src/: main.rs  moves.rs  protocol.rs
crates/match-runner/: Cargo.toml
crates/match-runner/src/: elo.rs  engine.rs  main.rs
crates/sekirei-bench/: Cargo.toml
crates/sekirei-core/: Cargo.toml
crates/sekirei-core/examples/: filter_terminal.rs  l2_alignment_formation_probe.rs  l2_delta_z_probe.rs  l2_saturation_probe.rs  l2_state_swap_probe.rs  l2_threshold_crossing_probe.rs  legal_move_count.rs
crates/sekirei-core/src/: budget.rs  lib.rs  movegen.rs  nnue.rs  search.rs  speculative.rs  tt.rs
crates/sekirei-csa/: Cargo.toml
crates/sekirei-csa/src/: main.rs  protocol.rs
crates/sekirei-match-runner/: Cargo.toml
crates/sekirei-match-runner/examples/: verify_pairing.rs
crates/sekirei-match-runner/src/: elo.rs  engine.rs  main.rs
crates/sekirei-train/: Cargo.toml
crates/sekirei-train/src/: book.rs  csa.rs  diagnostics.rs  exporter.rs  main.rs  positions.rs  scored.rs  teacher_cache.rs  trainer.rs
crates/sekirei-usi/: Cargo.toml
crates/sekirei-usi/src/: book.rs  invariant.rs  main.rs
crates/sekirei-usi/tests/: setoption_evalfile.rs  usi_thread_race.rs
crates/shogi-core/: Cargo.toml
crates/shogi-core/src/: bitboard.rs  board.rs  color.rs  eval.rs  hand.rs  lib.rs  movegen.rs  mv.rs  nnue.rs  perft.rs  piece.rs  policy.rs  search.rs  sfen.rs  speculative.rs  square.rs  tt.rs  zobrist.rs
crates/train/: Cargo.toml
crates/train/src/: csa.rs  main.rs  trainer.rs
crates/usi/: Cargo.toml
crates/usi/src/: main.rs
docs/: training_lessons.md
docs/experiments/: ablation_lr_schedule_a8_vs_b3.md  cp_wdl_gradient_decomposition.md  cp_wdl_target_residual_trace.md  epoch1_batch_trace.md  gate_b_lambda07.md  global_gradient_clipping.md  intermittent_replay_desync_investigation.md  l2_alignment_formation_trace.md  l2_b5_cp_wdl_component_replay.md  l2_b5_ft_unit_collapse.md  l2_b5_shadow_trace.md  l2_bias_init.md  l2_saturation_freeze_diagnostic.md  l2_saturation_ft_freeze_block_screen.md  l2_saturation_ft_freeze_block_screen_stage_b.md  l2_saturation_ft_freeze_block_screen_stage_c.md  l2_saturation_ft_freeze_continuity.md  l2_saturation_ft_freeze_dense_clock.md  l2_saturation_ft_freeze_localization.md  l2_saturation_ft_freeze_phase_paired.md  l2_saturation_mechanism_p0.md  l2_saturation_order_sensitivity_p1.md  l2_saturation_state_swap_probe.md  l2_saturation_windowed_ft_freeze.md  output_warmup.md  quietset_teacher_conflict_falsification.md  sample_grad_correlation_trace.md  teacher_conflict_masking.md  wdl_target_scale_ablation.md
results/: 20260701_215108_sync_overhead.txt  20260701_231329.json  20260701_231333.json  20260703_004534.json  20260703_004537.json  20260703_012246.json  20260703_012248.json  20260704_135643_material_vs_v7.json  README.md
scripts/: bc_continue_10k.sh  check_longrun_meta.py  check_warmup_validation.py  cleanup_runs.sh  flatten_label_to_quietset.py  gate_dashboard.py  opening_sanity.sh  redo_quietset_bc.sh  run_longrun_conflict_mask.sh  select_longrun_checkpoint.py  sprint_gate.sh  strength_regression.sh  test_gate_dashboard.py  train_with_loss_mining.sh  train_with_shogiesa_quietset.sh
