[workspace]
members = [
    "crates/shogi-core",
    "crates/bench",
    "crates/usi",
    "crates/train",
    "crates/csa",
    "crates/match-runner",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
