[package]
name = "sekirei-bench"
version = "0.2.3"
edition = "2024"
description = "Benchmarks for the Sekirei shogi engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kent-tokyo/sekirei"

[dependencies]
sekirei-core = { path = "../sekirei-core", version = "0.2.3" }
rayon = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "movegen"
harness = false

[[bin]]
name = "sync_overhead"
path = "src/bin/sync_overhead.rs"
