[package]
name = "sekirei-core"
version = "0.2.3"
edition = "2024"
description = "Shogi engine core library — speculative parallel search and NNUE-style evaluation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kent-tokyo/sekirei"

[dependencies]
rayon = "1"

[lib]
name = "sekirei_core"
