[package]
name = "sekirei-csa"
version = "0.2.3"
edition = "2024"
description = "CSA/floodgate client for the Sekirei shogi engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kent-tokyo/sekirei"

[[bin]]
name = "sekirei-csa"
path = "src/main.rs"

[dependencies]
sekirei-core = { path = "../sekirei-core", version = "0.2.3" }
dotenvy = "0.15"
