[package]
name = "sekirei-match-runner"
version = "0.2.3"
edition = "2024"
description = "USI-vs-USI match manager for Sekirei shogi engine testing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kent-tokyo/sekirei"

[[bin]]
name = "sekirei-match"
path = "src/main.rs"

[dependencies]
sekirei-core = { path = "../sekirei-core", version = "0.2.3" }
# Unreleased/unversioned personal project (still 0.1.0, no crates.io release) --
# pin to an exact commit, not a branch, per the same lesson learned from
# shogiesa/quietset (see tasks/lessons.md).
veridict = { git = "https://github.com/kent-tokyo/veridict", rev = "581e96e95e2680ce69ef0784018d9134f84e4864" }
