[package]
name = "sekirei-train"
version = "0.2.4"
edition = "2024"
description = "NNUE training pipeline for the Sekirei shogi engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kent-tokyo/sekirei"

[[bin]]
name = "train"
path = "src/main.rs"

[dependencies]
sekirei-core = { path = "../sekirei-core", version = "0.2.3" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lineprior = { git = "https://github.com/kent-tokyo/lineprior", rev = "c6040ebee1da31f2f5442811522725b08ae0a75e" }

[dev-dependencies]
tempfile = "3"
