[package]
name = "sekirei-train"
version = "0.3.0"
edition = "2024"
description = "NNUE training pipeline for the Sekirei shogi engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kent-tokyo/sekirei"

[[bin]]
name = "train"
path = "src/main.rs"

[dependencies]
sekirei-core = { path = "../sekirei-core", version = "0.3.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lineprior = { git = "https://github.com/kent-tokyo/lineprior", rev = "dcfca91f902ec269b7a518ec0c3a48d079a0406c" }

[dev-dependencies]
tempfile = "3"
