[package]
name = "sekirei"
version = "0.2.3"
edition = "2024"
description = "USI shogi engine binary (Sekirei)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kent-tokyo/sekirei"

[[bin]]
name = "sekirei"
path = "src/main.rs"

[dependencies]
sekirei-core = { path = "../sekirei-core", version = "0.2.3" }
rayon = "1"
lineprior = { git = "https://github.com/kent-tokyo/lineprior", rev = "c6040ebee1da31f2f5442811522725b08ae0a75e" }
