[package]
name = "sekirei"
version = "0.2.3"
edition = "2024"
description = "USI shogi engine binary (Sekirei)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kent-tokyo/sekirei"

[[bin]]
name = "sekirei"
path = "src/main.rs"

[dependencies]
sekirei-core = { path = "../sekirei-core", version = "0.2.3" }
rayon = "1"
lineprior = { git = "https://github.com/kent-tokyo/lineprior", rev = "dcfca91f902ec269b7a518ec0c3a48d079a0406c" }
